--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/image/logo.png" />
     <title>Ikeya Naturals | Handcrafted Haircare for Natural Hair</title>
     <style>
         :root {
@@ -1011,7 +1012,10 @@
 </head>
 <body>
     <nav>
-        <div class="logo">Ikeya<span>Naturals</span></div>
+        <div class="logo">
+            <a href="index.html" style="text-decoration: none; color: inherit;">Ikeya<span>Naturals</span></a>
+        </div>
+        </nav>
     </nav>
     
     <section class="hero">
