--- a/thank-you.html
+++ b/thank-you.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/image/logo.png" />
     <title>Thank You | Ikeya Naturals</title>
     <style>
         /* In thank-you.html, update :root in the <style> section */
@@ -235,7 +236,9 @@
 </head>
 <body>
     <nav>
-        <div class="logo">Ikeya<span>Naturals</span></div>
+        <div class="logo">
+            <a href="index.html" style="text-decoration: none; color: inherit;">Ikeya<span>Naturals</span></a>
+        </div>
     </nav>
     
     <!-- In thank-you.html, update the script section and add CTA buttons -->
