--- a/thank-you.html
+++ b/thank-you.html
@@ -289,7 +289,7 @@
         <!-- Add CTA buttons -->
         <div class="cta-buttons">
             <a href="index.html" class="btn btn-primary">Continue Shopping</a>
-            <a href="mailto:support@ikeyanaturals.com" class="btn btn-outline">Contact Support</a>
+            <a href="tel:+2348123456789" class="btn btn-outline">Call or WhatsApp Support</a>
         </div>
     </section>
         
