added google tracking

--- a/thank-you.html
+++ b/thank-you.html
@@ -299,6 +299,13 @@
             &copy; 2023 Ikeya Naturals. Handcrafted in Nigeria with love.
         </div>
     </footer>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5PGF1LFF1C"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-5PGF1LFF1C'); // Replace with your ID
+    </script>
 
     <script>
         // Get data from URL parameters
