--- a/checkout.html
+++ b/checkout.html
@@ -593,6 +593,13 @@
             © 2023 Ikeya Naturals. Handcrafted in Nigeria with love.
         </div>
     </footer>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5PGF1LFF1C"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-5PGF1LFF1C'); // Replace with your ID
+    </script>
     
     <script src="https://js.paystack.co/v1/inline.js"></script>
     <script type="text/javascript"
