--- a/index.html
+++ b/index.html
@@ -1378,5 +1378,12 @@
             });
         });
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5PGF1LFF1C"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-5PGF1LFF1C'); // Replace with your ID
+    </script>
 </body>
 </html>
