--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
     
     <section class="hero">
         <div class="hero-content">
-            <h1>Your Natural Hair's <span>Best Kept Secret</span></h1>
+            <h1>You’ll Wish You Knew This <span>Natural Hair Secret Sooner</span></h1>
             <p>Handcrafted in Nigeria with love and ancestral wisdom, Ikeya Naturals transforms dry, brittle hair into lush, hydrated crowns using nature's most potent ingredients.</p>
             <button class="buy-now-btn">SHOP NOW</button>
         </div>
